--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@mokuteki/isolated-transactions",
+  "name": "@mokuteki/propagated-transactions",
   "version": "1.0.2",
-  "description": "Convenient wrapper to run database transactions in isolated context using AsyncLocalStorage",
-  "main": "lib/isolated-transaction.js",
+  "description": "Convenient wrapper to propagate and manage database transactions using AsyncLocalStorage",
+  "main": "lib/propagated-transaction.js",
   "scripts": {
     "test": "node --test test/suits/"
   },
-  "types": "types/isolated-transaction.d.ts",
+  "types": "types/propagated-transaction.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mokuteki225/isolated-transactions.git"
+    "url": "git+https://github.com/mokuteki225/propagated-transactions.git"
   },
   "keywords": [
     "database",
@@ -20,9 +20,9 @@
   "author": "Vladyslav Kondratiuk",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mokuteki225/isolated-transactions/issues"
+    "url": "https://github.com/mokuteki225/propagated-transactions/issues"
   },
-  "homepage": "https://github.com/mokuteki225/isolated-transactions#readme",
+  "homepage": "https://github.com/mokuteki225/propagated-transactions#readme",
   "devDependencies": {
     "@types/node": "^18.14.6",
     "eslint": "^8.35.0",
@@ -37,7 +37,7 @@
     "#root/*.js": "./*.js",
     "#test/*.js": "./test/*.js"
   },
-  "exports": "./lib/isolated-transaction.js",
+  "exports": "./lib/propagated-transaction.js",
   "directories": {
     "lib": "lib",
     "test": "test"
