--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  postgres:
+  propagated_transactions_postgres:
     image: postgres:14
     restart: always
     environment:
